# LiquidLevelSensor

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  generate-image.ps1  partitions.csv  sdkconfig.defaults
common/: CMakeLists.txt
common/include/: sensor_driver.h
common/src/: sensor_driver.c
esp_idf_lib_helpers/: esp_idf_lib_helpers.h
ha/external_converters/: llsensor.001-converter.js
helpers/include/: array.h
helpers/src/: array.c
main/: CMakeLists.txt  idf_component.yml  main.c  zigbee.c  zigbee.h
sensor/: CMakeLists.txt
sensor/include/: level_sensor.h
sensor/src/: level_sensor.c
